# valo43_tuner

./: Cargo.toml  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx  lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/configs/: config.toml
src-tauri/src/: commands.rs  lib.rs  main.rs  utils.rs
src-tauri/src/commands/: config.rs  display.rs  mod.rs  valorant.rs  watcher.rs
src-tauri/src/config/: create.rs  mod.rs  parser.rs  writer.rs
src-tauri/src/configs/: app_config.rs  app_state.rs
src-tauri/src/constant/: mod.rs
src-tauri/src/display/: display.rs
src-tauri/src/games/: valorant.rs
src-tauri/src/monitor/: monitor.rs
src-tauri/src/state/: mod.rs
src-tauri/src/utils/: command_manager.rs  constant_manager.rs  display_manager.rs  logger_manager.rs  text_manager.rs  watcher_manager.rs
src-tauri/src/valorant/: init.rs
src-tauri/src/watcher/: mod.rs
src/components/: Button.tsx  Layout.tsx  NumberInput.tsx  Sidebar.tsx  Switch.tsx
src/config/: create.rs  mod.rs  parser.rs
src/hooks/: useConfig.ts
src/ipc/: config.ts  monitor.ts  valorant.ts
src/pages/: AboutPage.tsx  Home.tsx  HomePage.tsx  Settings.tsx  Tutorial.tsx  ValorantPage.tsx
src/styles/: button.css  global.css  home.css  numberinput.css  settings.css  sidebar.css  switch.css  tutorial.css
src/types/: index.ts
src/valorant/: mod.rs
