[package]
name = "valo43_tuner"
version = "0.1.0"
edition = "2024"

[dependencies]
encoding = "0.2.33"
rust-embed = "8.9.0"
sysinfo = "0.37.2"
tokio = { version = "1.49.0", features = ["full"] }
windows = { version = "0.58", features = [
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
] }
thiserror = "1.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.11"
