[package]
name = "fps_enhancer"
version = "1.1.1"
description = "A Tauri App"
authors = ["Garusuta"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fps_enhancer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9.8"
rust-embed = "8.11.0"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "time"] }
time = { version = "0.3.46", features = ["formatting", "local-offset", "macros"] }
windows = { version = "0.62.2", features = [
    "Win32_Graphics_Gdi",
] }
thiserror = "2.0.18"
sysinfo = "0.38.0"
tokio = { version = "1.49.0", features = ["full"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"

[profile.release]
lto = true
opt-level = "z"
strip = true
codegen-units = 1
panic = "abort"
